UI fix/contrast range fix

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,14 +3,25 @@
 	overflow: hidden;
 	margin: 0;
 	padding: 1rem;
-	box-sizing: border-box;
 	display: flex;
 	flex-direction: row;
 	background-color: #FFFFF9;
-	height: 100%;
+	height: 100vh;
 	justify-content: center;
 	align-items: center;
 	color: black;
+}
+
+.adjust-up{
+	position: relative;
+	bottom: 30px;
+}
+
+.flex-row{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
 }
 
 
@@ -20,21 +31,12 @@
 
 }
 
-.logo{
-	height: 100px;
-}
 
 input[type="file"] {
    
 }
 .icon-main{
-	height: 15%;
-	width: 15%;
-	justify-self: center;
-	text-align: center;
-	align-self: center;
-	margin: 0;
-	padding: 0;
+	height: 80px;
 	
 }
 .button-box{
